objects/Box_BPS__c.object
<CustomObject>
    <fields>
        <fullName>Folder_Details__c</fullName>
        <label>Folder Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Folder_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Folder Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interconnection_Status__c</fullName>
        <label>Interconnection Status</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Box BPSs</relationshipLabel>
        <relationshipName>Box_BPSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permitting_Status__c</fullName>
        <label>Permitting Status</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Status__c</fullName>
        <label>Real Estate Status</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <label>Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Box BPS</label>
    <nameField>
        <displayFormat>bbpsn-{000}</displayFormat>
        <label>Box BPS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Box BPSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>